2016-04-27  Jérôme Pasquier  <rainbru@free.fr>

	* CMakeLists.txt (pot_file): start to handle translation with cmake.
	* CMakeLists.txt (XGETTEXT_CMD): search for the xgettext executable.

2016-03-13  Jérôme Pasquier  <rainbru@free.fr>

	* logger/src/ : start to remove unneeded autotools files.

2016-02-19  Jérôme Pasquier  <rainbru@free.fr>

	* */README: removed from git control.
	* FT.sh: add top-level ROADMAP to cat.

2016-01-24  Jérôme Pasquier  <rainbru@free.fr>

	* CMakeLists.txt (CMAKE_CXX_FLAGS): defines the __FILENAME__ variable
	to fix the full path.
	* src/logger/Logger.hpp (LOG): now uses __FILENAME__ to fix full path
	in output.

2016-01-16  Jérôme Pasquier  <rainbru@free.fr>

	* client/media/: moved to media/ (top level).
	* client/src/resources.cfg:  renamed resources.cfg.in.

	* CMakeLists.txt (CONFIGURE_FILE): cmake now generates plugins.cfg.

2016-01-05  Jérôme Pasquier  <rainbru@free.fr>

	* src/logger/ : change headers date for 2016.

	* server/ : change headers date for 2016.
	* services/ : change headers date for 2016.

	* network/src/benchmark/ : change headers date for 2016.
	* meta/src/*.pm: change footers date for 2016.

2016-01-04  Jérôme Pasquier  <rainbru@free.fr>

	* client/src/: change headers date for 2016.

2015-10-28  Jérôme Pasquier  <rainbru@free.fr>

	* CMakeLists.txt: uses FindGettext.
	* README.md: added cmake based install instructions.
	* INSTALL: basic cmake based steps.

2015-09-08  Jérôme Pasquier  <rainbru@free.fr>

	* logger/AUTHORS: move to top-level and remove all other copies.
	* logger/COPYING: move to top-level and remove other copies (client,
	meta, network, server,services).

2015-09-05  Jérôme Pasquier  <rainbru@free.fr>

	* CMakeLists.txt (BUILD_LOGREADER): add an error message and fatal
	error if we can't find rbuic4.

	* CMakeLists.txt (BUILD_LOGREADER): correctly generate MainWindow_ui
	ruby sources from .ui file.

2015-09-05  Jérôme Pasquier  <rainbru@free.fr>
