@@ -1,0 +1,4 @@
+# List of source files which contain translatable strings.
+src/logger/Logger.cpp
+src/logger/LoggerOutputFile.cpp
+src/logger/LoggerOutputTty.cpp
